--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -46,7 +46,7 @@
 <br>
 <!-- INTRO -->
 <div class="intro" id="intro">
-   <h1 class="heading">Vi bygger nettsider som konverterer</h1>
+   <h1 class="heading">Vi utvikler nettsider som konverterer</h1>
    <p>Har du en nettbutikk eller driver eget firma?<br><span class="light-overlay">Vi er her for å hjelpe deg!</span> Vi består av Norges beste designere og utviklere, og vi garanter at du vil elske nettsiden. Under finner du en demo for hver enkel nettside</p>
    <br>
    <div class="sites">
@@ -133,7 +133,7 @@
 <br>
 <!-- CONTACT US -->
 <div class="contact-us" id="contactUs">
-   <h1 class="heading">Trenger du extra hjelp?</h1>
+   <h1 class="heading">Trenger du ekstra hjelp?</h1>
    <p>Trykk på chatt ikonet nederst til høyre, eller kontakter oss under</p>
    <form action="" method="POST">
       {% csrf_token %}
