--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -10,7 +10,7 @@ $loader: rgb(80, 104, 180);
 
 // GLOBAL
 body{
-  background: linear-gradient(to left, rgba(202, 215, 255, 0.13));
+  background:rgb(250, 251, 255);
 }
 
 .light-overlay{
