--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -46,7 +46,7 @@ html, body {
   .sites{
     padding: 10px;
     text-align: left;
-    background: #93acffa8;
+    background: #93acff67;
     width: 100%;
     height: 190px;
     display: flex;
@@ -55,8 +55,8 @@ html, body {
     .swiper-wrapper{
       .swiper-slide{
         background: #607bd3;
-        width: 140px !important;
-        height: 80px !important;
+        width: 150px !important;
+        height: 100px !important;
         text-align: center;
         margin: 20px;
         margin-left: 0;
@@ -71,6 +71,7 @@ html, body {
           color: white;
           font-size: 10px;
           padding-top: 5px;
+          transform: translateY(10px);
         }
       }
     }
