--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -235,7 +235,7 @@
                             margin: 5px;
                             opacity: 0.65 !important;
                             &#logOut{
-                                color: rgb(255, 42, 42);
+                                color: rgb(255, 42, 42) !important;
                             }
                         }
                         &.active{
