--- a/static/scss/store/order.scss
+++ b/static/scss/store/order.scss
@@ -1,23 +1,35 @@
 $loader: rgb(80, 104, 180);
+$input: rgb(60, 84, 160);
 
 // STANDARD PHONE
 .bottom-nav{
   display: none !important;
 }
-
+#footer{
+  padding-bottom: 0 !important;
+}
+// COVER
+.cover{
+  width: 100%;
+  height: auto;
+  position: relative;
+  img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    filter: brightness(50%);
+  }
+}  
 .make-order{
     width: 100%;
     height: auto;
     padding: 10px 0;
-    text-align: center;
     background: transparent;
     form{
         text-align: left;
-        padding: 10px;
         margin: 15px;
         margin-top: 0;
-        background: #f1f4ff;
-        border-radius: 4px;
+        background: transparent;
         label{
           margin-top: 30px;
           margin-bottom: 10px;
@@ -33,73 +45,72 @@ $loader: rgb(80, 104, 180);
           .order-form-step1{
             position: relative;
             padding-top: 20px;
-            background: #e8edff;
+            background: transparent;
             h1{
               &.heading{
+                margin-bottom: 15px;
+                margin-top: 10px;
                 width: 100%;
-                text-transform: uppercase;
                 font-family: 'Sniglet', cursive;
-                color: rgb(20, 44, 120);
-                font-weight: 700;
+                color: black;
+                font-weight: bold;
                 font-size: 26px;
-                text-align: center;
               }
             }
             .form-tag-products{
               font-size: 15px;
               color: rgb(48, 71, 146);
+              background: white;
               border-radius: 5px;
-              background: #e8edff;
               width: max-content;
               padding: 0 2px;
               position: absolute;
-              left: 15px;
-              top: 43px;
+              left: 25px;
+              top: 60px;
             }
             .form-tag-hosting{
               font-size: 15px;
               color: rgb(48, 71, 146);
+              background: white;
               border-radius: 5px;
-              background: #e8edff;
               width: max-content;
               padding: 0 2px;
               position: absolute;
-              left: 15px;
-              top: 132px;
+              left: 25px;
+              top: 149px;
             }
             .form-tag-image{
               font-size: 15px;
               color: rgb(48, 71, 146);
+              background: white;
               border-radius: 5px;
-              background: #e8edff;
               width: max-content;
               padding: 0 2px;
               position: absolute;
-              left: 15px;
-              top: 220px;
+              left: 25px;
+              top: 237px;
             }
             .form-tag-color{
               font-size: 15px;
               color: rgb(48, 71, 146);
+              background: white;
               border-radius: 5px;
-              background: #e8edff;
               width: max-content;
               padding: 0 2px;
               position: absolute;
-              left: 15px;
-              top: 329px;
+              left: 25px;
+              top: 357px;
               z-index: 1;
             }
             .color-inputs{
               display: flex;
               width: 100%;
               position: relative;
-              border: 2px solid rgb(60, 84, 160);
+              border: 2px solid $input;
               border-radius: 4px;
               .or{
                 font-size: 15px;
                 color: rgb(60, 84, 160);
-                background: transparent;
                 width: max-content;
                 padding: 0 2px;
                 align-self: center;
@@ -118,40 +129,25 @@ $loader: rgb(80, 104, 180);
               }
             }
             .info{
-              width: 100%;
-              text-align: center;
-              font-size: 14px;
-              color: rgb(60, 84, 160);
+              text-align: left;
+              color: black;
               margin-bottom: -5px;
-              margin-top: 10px;
-              opacity: 0.7;
-              pointer-events: none;
-              &.order-product-info{
-                display: block;
-                position: absolute;
-                background: white;
-                width: 100%;
-                height: 100vh;
-                z-index: 100;
-                opacity: 0;
-                padding-top: 10px;
-                transform: translateY(40px);
-                transition: all .3s ease-in-out;
-                &.active{
-                  opacity: 1;
-                }
-              }
+              margin-top: 15px;
+              font-size: 15px;
+              font-family: 'Sniglet', cursive;
+              opacity: 0.8;
+              line-height: 130%;
             }
             .form-tag-num_pages{
               font-size: 15px;
               color: rgb(48, 71, 146);
               border-radius: 5px;
-              background: #e8edff;
+              background: white;
               width: max-content;
               padding: 0 2px;
               position: absolute;
-              left: 15px;
-              top: 475px;
+              left: 25px;
+              top: 536px;
               z-index: 1;
             }
             .product-price{
@@ -195,22 +191,22 @@ $loader: rgb(80, 104, 180);
                 pointer-events: visible;
                 transform: translateY(0);
               }
-              .dropdown-border{
-                border: 2px solid rgb(60, 84, 160);
+              h1{
+                margin: auto;
+                margin-bottom: 20px;
+                margin-top: 20px;
+                width: 230px;
+                font-family: 'Sniglet', cursive;
+                color: black;
+                font-size: 24px;
+                border: .5px solid rgba(209, 209, 209, 0.397);
                 padding: 10px;
-                border-radius: 4px;
+                border-radius: 15px;
+              }
+              .choices{
                 h1{
-                  font-size: 17px;
-                  padding: 3px;
-                  background: rgba(240, 240, 240, 0.6);
-                }
-                .flex{
-                  display: flex;
-                  width: 100%;
-                  h1{
-                    width: 50%;
-                    border: 2px solid white;
-                  }
+                  width: 210px;
+                  font-size: 16px;
                 }
               }
             }
@@ -218,7 +214,6 @@ $loader: rgb(80, 104, 180);
               position: absolute;
               width: 100%;
               height: 100vh;
-              background: white;
               z-index: 1000;
               text-align: center;
               padding: 20px;
@@ -226,27 +221,28 @@ $loader: rgb(80, 104, 180);
               transition: all .3s ease-in-out;
               pointer-events: none;
               transform: translateY(-30px);
+              background: white;
               &.active{
                 opacity: 1;
                 pointer-events: visible;
                 transform: translateY(0);
               }
-              .dropdown-border{
-                border: 2px solid rgb(60, 84, 160);
+              h1{
+                margin: auto;
+                margin-bottom: 20px;
+                margin-top: 20px;
+                width: 230px;
+                font-family: 'Sniglet', cursive;
+                color: black;
+                font-size: 24px;
+                border: .5px solid rgba(209, 209, 209, 0.397);
                 padding: 10px;
-                border-radius: 4px;
+                border-radius: 15px;
+              }
+              .choices{
                 h1{
-                  font-size: 17px;
-                  padding: 3px;
-                  background: rgba(240, 240, 240, 0.6);
-                }
-                .flex{
-                  display: flex;
-                  width: 100%;
-                  h1{
-                    width: 50%;
-                    border: 2px solid white;
-                  }
+                  width: 210px;
+                  font-size: 16px;
                 }
               }
             }
@@ -254,7 +250,6 @@ $loader: rgb(80, 104, 180);
               position: absolute;
               width: 100%;
               height: 100vh;
-              background: white;
               z-index: 1000;
               text-align: center;
               padding: 20px;
@@ -262,34 +257,35 @@ $loader: rgb(80, 104, 180);
               transition: all .3s ease-in-out;
               pointer-events: none;
               transform: translateY(-30px);
+              background: white;
               &.active{
                 opacity: 1;
                 pointer-events: visible;
                 transform: translateY(0);
               }
-              .dropdown-border{
-                border: 2px solid rgb(60, 84, 160);
+              h1{
+                margin: auto;
+                margin-bottom: 20px;
+                margin-top: 20px;
+                width: 230px;
+                font-family: 'Sniglet', cursive;
+                color: black;
+                font-size: 24px;
+                border: .5px solid rgba(209, 209, 209, 0.397);
                 padding: 10px;
-                border-radius: 4px;
+                border-radius: 15px;
+              }
+              .choices{
                 h1{
-                  font-size: 17px;
-                  padding: 3px;
-                  background: rgba(240, 240, 240, 0.6);
-                }
-                .flex{
-                  display: flex;
-                  width: 100%;
-                  h1{
-                    width: 50%;
-                    border: 2px solid white;
-                  }
+                  width: 210px;
+                  font-size: 16px;
                 }
               }
             }
             .arrow-down{
               position: absolute;
               right: 2px;
-              background: rgb(60, 84, 160);
+              background: $input;
               padding: 7px;
               transform: translateY(-39px);
               border-radius: 0;
@@ -304,13 +300,14 @@ $loader: rgb(80, 104, 180);
             }
             .input{
               width: 100%;
-              border: 2px solid rgb(60, 84, 160);
+              border: 2px solid $input;
               border-radius: 4px;
               padding: 7px;
               outline: none;
               font-size: 15px;   
+              background: white;
               &.order-image{
-                padding: 15px;
+                padding: 20px;
               }
               &.order-products{
                 padding: 7px;
@@ -331,131 +328,125 @@ $loader: rgb(80, 104, 180);
             padding-top: 20px;
             h1{
               &.heading{
+                margin-bottom: 15px;
+                margin-top: 10px;
                 width: 100%;
-                text-transform: uppercase;
                 font-family: 'Sniglet', cursive;
-                color: rgb(20, 44, 120);
-                font-weight: 700;
+                color: black;
+                font-weight: bold;
                 font-size: 26px;
-                text-align: center;
+              }
             }
-          }
           .info{
-            width: 100%;
-            text-align: center;
-            font-size: 14px;
-            color: rgb(60, 84, 160);
-            margin-bottom: -5px;
-            margin-top: 10px;
-            opacity: 0.7;
-            pointer-events: none;
-          }
+              text-align: left;
+              color: black;
+              margin-bottom: -5px;
+              margin-top: 15px;
+              font-size: 15px;
+              font-family: 'Sniglet', cursive;
+              opacity: 0.8;
+              line-height: 130%;
+            }
           .form-tag-css{
             font-size: 15px;
             color: rgb(48, 71, 146);
             border-radius: 5px;
-            background: #e8edff;
+            background: white;
             width: max-content;
             padding: 0 2px;
             position: absolute;
-            left: 15px;
-            top: 72px;
+            left: 25px;
+            top: 93px;
           }
           .form-tag-html{
             font-size: 15px;
             color: rgb(48, 71, 146);
             border-radius: 5px;
-            background: #e8edff;
+            background: white;
             width: max-content;
             padding: 0 2px;
             position: absolute;
-            left: 15px;
-            top: 136px;
+            left: 25px;
+            top: 158px;
           }
           .form-tag-javascript{
             font-size: 15px;
             color: rgb(48, 71, 146);
             border-radius: 5px;
-            background: #e8edff;
+            background: white;
             width: max-content;
             padding: 0 2px;
             position: absolute;
-            left: 15px;
-            top: 200px;
+            left: 25px;
+            top: 223px;
           }
           .form-tag-python_django{
             font-size: 15px;
             color: rgb(48, 71, 146);
             border-radius: 5px;
-            background: #e8edff;
+            background: white;
             width: max-content;
             padding: 0 2px;
             position: absolute;
-            left: 15px;
-            top: 265px;
+            left: 25px;
+            top: 288px;
           }
           .input{
             width: 100%;
-            border: 2px solid rgb(60, 84, 160);
+            border: 2px solid $input;
             border-radius: 4px;
             padding: 7px;
             outline: none;
             font-size: 15px;   
+            background: white;
           }
         }  
           .order-form-step3{
             position: relative;
             padding-top: 20px;
-            .google-recaptcha{
-              margin: 20px 0;
-              width: 100%;
-              display: flex;
-              justify-content: left;
-              align-items: left;
-            }
             h1{
               &.heading{
+                margin-bottom: 15px;
+                margin-top: 10px;
                 width: 100%;
-                text-transform: uppercase;
                 font-family: 'Sniglet', cursive;
-                color: rgb(20, 44, 120);
-                font-weight: 700;
+                color: black;
+                font-weight: bold;
                 font-size: 26px;
-                text-align: center;
               }
             }
             .form-tag-name{
               font-size: 15px;
               color: rgb(48, 71, 146);
               border-radius: 5px;
-              background: #e8edff;
+              background: white;
               width: max-content;
               padding: 0 2px;
               position: absolute;
-              left: 15px;
-              top: 43px;
+              left: 25px;
+              top: 61px;
             }
             .form-tag-email{
               font-size: 15px;
               color: rgb(48, 71, 146);
               border-radius: 5px;
-              background: #e8edff;
-              width: max-content;
+              background: white;            
+                width: max-content;
               padding: 0 2px;
               position: absolute;
-              left: 15px;
-              top: 107px;
+              left: 25px;
+              top: 125px;
             }
             .form-tag-message{
               font-size: 15px;
               color: rgb(48, 71, 146);
               border-radius: 5px;
-              background: #e8edff;
+              background: white;
               width: max-content;
               padding: 0 2px;
               position: absolute;
-              left: 15px;
-              top: 171px;
+              left: 25px;
+              top: 190px;
             }
             input{
               width: 100%;
