--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -124,7 +124,10 @@
 <div class="positive">
    <h1 class="heading">Vi garanter positive resultater</h1>
    <div class="content">
-      <img src="{% static '/images/covers/approve.png' %}" alt="image personal skills copywrite web nett">
+      <div class="content-2">
+         <h1>Hva venter du på?</h1>
+         <a href="/bestill">Kom i gang nå!</a>
+      </div>
    </div>
 </div>
 <br>
