--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -48,10 +48,10 @@
                     <div class="help-dropdown">
                         <a onclick="help()" id="helpToggle">Kundeservice<i class="fas fa-chevron-down"></i></a>
                         <div class="help-dropdown-links" id="helpDropdown">
-                            <a href="">Prossesen av bestillinger</a>
-                            <a href="">Forum</a>
-                            <a href="">Spørr om redigeringer på nettsiden</a>
-                            <a href="">Programering språkene</a>
+                            <a href="/prossesen-av-bestillinger">Prossesen av bestillinger</a>
+                            <a href="/forum">Forum</a>
+                            <a href="/spørr-om-endringer">Spørr om redigeringer på nettsiden</a>
+                            <a href="/de-tre-frontend-språkene">Programering språkene</a>
                         </div>
                     </div>
                     <div class="account-dropdown">
