--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -270,24 +270,43 @@ html, body {
   background: #93acffa8;
   width: 100%;
   height: 150px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   border-bottom-left-radius: 8%;
   border-bottom-right-radius: 8%;
 }
 
-.positive .content img {
-  width: auto;
-  height: 180px;
-  -webkit-transform: translateY(45px);
-          transform: translateY(45px);
+.positive .content .content-2 {
+  text-align: center;
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(80px);
+          transform: translateX(-50%) translateY(80px);
+  background: white;
+  width: 280px;
+  height: auto;
+  padding: 10px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.212);
+          box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.212);
+}
+
+.positive .content .content-2 h1 {
+  margin-bottom: 15px;
+  margin-top: 10px;
+  width: 100%;
+  font-family: 'Sniglet', cursive;
+  color: black;
+  font-size: 22px;
+}
+
+.positive .content .content-2 a {
+  margin-bottom: 15px;
+  margin-top: 10px;
+  width: 100%;
+  font-family: 'Sniglet', cursive;
+  color: #1cd31c;
+  font-size: 18px;
+  margin: 10px;
+  text-decoration: underline;
 }
 
 .positive h1.heading {
