--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -239,15 +239,37 @@ html, body {
     background: #93acffa8;
     width: 100%;
     height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     border-bottom-left-radius: 8%;
     border-bottom-right-radius: 8%;
-    img{
-      width: auto;
-      height: 180px;
-      transform: translateY(45px);
+    .content-2{
+      text-align: center;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%) translateY(80px);
+      background: white;
+      width: 280px;
+      height: auto;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.212);
+      h1{
+        margin-bottom: 15px;
+        margin-top: 10px;
+        width: 100%;
+        font-family: 'Sniglet', cursive;
+        color: black;
+        font-size: 22px;
+      }
+      a{
+        margin-bottom: 15px;
+        margin-top: 10px;
+        width: 100%;
+        font-family: 'Sniglet', cursive;
+        color: rgb(28, 211, 28);
+        font-size: 18px;
+        margin: 10px;
+        text-decoration: underline;
+      }
     }
   }
   h1{
